# gopal-mandir

./: .gitignore
.cursor/rules/: performance-priority.mdc
docs/: play-store-deployment.md
gopal_mandir_api/: ADMIN_SETUP.md  Cargo.toml  Dockerfile  railway.toml
gopal_mandir_api/migrations/: 001_initial.sql  002_seed.sql  003_booking_and_live.sql  004_seed_live.sql  005_event_participation.sql  006_likes_comments.sql  007_seed_gallery_external_urls.sql  008_hindu_panchang.sql  009_add_temple_maps_url.sql  010_membership.sql  011_volunteer_requests.sql  012_admin.sql  013_gallery_media.sql  014_event_donations.sql  015_feedback_crm.sql  016_payment_fields_donations.sql  017_payment_failure_and_seva.sql  018_payment_admin_note.sql  019_prasad_payments.sql  020_pooja_appointments.sql  021_site_kv.sql  022_festival_calendar.sql  023_festival_media_and_assets.sql  024_daily_upasana_items.sql  025_daily_upasana_title_based.sql  026_temple_about_content.sql  027_live_darshan_clear_placeholder_description.sql  030_admin_activity_feed_indexes.sql  031_owner_admin_secret_codes.sql  032_astro_consult_requests.sql  033_community_qa.sql  034_successions.sql  035_daily_upasana_pdf.sql  036_visitor_events.sql  037_remove_visitor_events.sql  038_learning_topics.sql
gopal_mandir_api/src/: admin.rs  admin_pooja.rs  cache.rs  main.rs  models.rs  pooja_logic.rs  pooja_routes.rs  razorpay.rs  routes.rs  s3_presign.rs  seed_data.rs  util.rs
gopal_mandir_api/static/: privacy.html
gopal_mandir_app/: .firebaserc  README.md  analysis_options.yaml  firebase.json  pubspec.yaml
(+173 files in other folders)
